--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
