--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "main": "assets/js/index.js",
 
+  "scripts": {
+    "build": "webpack",
+    "start": "webpack --watch",
+    "lint": "eslint -c .eslintrc assets/**/*.{js,jsx}"
+  },
+
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
@@ -13,7 +19,6 @@
     "eslint-plugin-react": "^7.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack": "^2.5.1"
   }
 }
