--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-react": "^7.0.0",
     "material-ui": "^0.18.0",
     "node-sass": "^4.5.2",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-tap-event-plugin": "^2.0.1",
