--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
     "material-ui": "^0.18.0",
+    "mocha": "^3.3.0",
     "node-sass": "^4.5.2",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
