--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
+    "chai": "^3.5.0",
     "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.0",
