--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1"
